--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; object-src 'none'">
     <link rel="shortcut icon" href="assets/images/122246146-383358083037993-7611301143656262981-n-188x92.png"
         type="image/x-icon" />
     <meta name="description" content="Solution Morning Star, LA solution pour faire du sport en s'amusant !" />
