--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
                 <div class="col-lg-6 col-md-12 map-wrapper">
                     <div class="google-map">
                         <iframe frameborder="0" style="border: 0"
+                            title="Google map frame"
                             src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=iim paris"
                             allowfullscreen=""></iframe>
                     </div>
