--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <h1 class="mbr-section-title mbr-fonts-style align-left display-1">
                         Morning Star
                     </h1>
-                    <p class="mbr-text pb-3 mbr-fonts-style display-7"></p>
+                    <p class="mbr-text pb-3 mbr-fonts-style display-7" aria-hidden="true"></p>
                 </div>
             </div>
         </div>
@@ -107,7 +107,7 @@
                     <h2 class="mbr-section-title mbr-fonts-style line-bg-warning display-2">
                         Solution Morning Star
                     </h2>
-                    <p class="text-top mbr-fonts-style display-7"></p>
+                    <p class="text-top mbr-fonts-style display-7" aria-hidden="true"></p>
                 </div>
             </div>
             <div class="row">
@@ -268,7 +268,7 @@
                                 <h5 class="mbr-fonts-style mbr-section-title display-2">
                                     <span class="line-bg-warning">Besoin d'une Démo ?</span>
                                 </h5>
-                                <p class="mbr-text mbr-fonts-style mbr-light display-7"></p>
+                                <p class="mbr-text mbr-fonts-style mbr-light display-7" aria-hidden="true"></p>
                             </div>
                             <div class="col-lg-12 form-group" data-for="Your name">
                                 <input type="text" name="Name" placeholder="Your name *" data-form-field="Name"
