--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; object-src 'none'"> -->
+    <meta property="og:title" content="Morning Star" />
+    <meta property="og:type" content="Morning Star website" />
+    <meta property="og:url" content="https://iim-opti-webiste.vercel.app/" />
+    <meta property="og:image" content="https://img.huffingtonpost.com/asset/5e2ee34f240000e5020b501f.jpeg?cache=66hH6JXnKE&ops=crop_26_306_1973_1528,scalefit_630_noupscale" />
+
     <link rel="shortcut icon" href="assets/images/122246146-383358083037993-7611301143656262981-n-188x92.png"
         type="image/x-icon" />
     <meta name="description" content="Solution Morning Star, LA solution pour faire du sport en s'amusant !" />
 
-    <title>Page d'accueil</title>
+    <title>Morning start</title>
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css" />
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css" />
     <link rel="stylesheet" href="assets/tether/tether.min.css" />
@@ -253,7 +258,7 @@
                 <div class="col-lg-6 my-auto pb-4 mbr-form" data-form-type="formoid">
                     <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler"
                         data-form-title="Form Name">
-                        <input type="hidden" name="email" data-form-email="true"
+                        <input type="hidden" name="email" data-form-email="true" title="Champ email"
                             value="bRqAm7gyMgPxFKQfuHUwlAXP5SR0FAtEPanepIBf85lHOfpqn5EM+oj5t+pgz4Zw4zeZIk99h41TcJll+AQa1srTW+uJW/WXxxlT1nMFV6IJBq1J+otxMPlqJDlIxBt9" />
                         <div class="form-row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">
@@ -271,11 +276,11 @@
                                 <p class="mbr-text mbr-fonts-style mbr-light display-7" aria-hidden="true"></p>
                             </div>
                             <div class="col-lg-12 form-group" data-for="Your name">
-                                <input type="text" name="Name" placeholder="Your name *" data-form-field="Name"
+                                <input type="text" name="Name" placeholder="Your name *" data-form-field="Name" title="Champ nom"
                                     required="required" class="form-control display-7" id="Name-forms1-y" />
                             </div>
                             <div data-for="E-mail" class="col-lg-12 form-group">
-                                <input type="tel" name="E-mail" placeholder="Your E-mail *" data-form-field="E-mail"
+                                <input type="tel" name="E-mail" placeholder="Your E-mail *" data-form-field="E-mail" title="Champ email"
                                     class="form-control display-7" required="required" id="E-mail-forms1-y" />
                             </div>
                             <div data-for="Message" class="col-lg-12 form-group">
