--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta property="og:title" content="Morning Star" />
     <meta property="og:type" content="Morning Star website" />
     <meta property="og:url" content="https://iim-opti-webiste.vercel.app/" />
-    <meta property="og:image" content="https://img.huffingtonpost.com/asset/5e2ee34f240000e5020b501f.jpeg?cache=66hH6JXnKE&ops=crop_26_306_1973_1528,scalefit_630_noupscale" />
+    <meta property="og:image"
+        content="https://img.huffingtonpost.com/asset/5e2ee34f240000e5020b501f.jpeg?cache=66hH6JXnKE&ops=crop_26_306_1973_1528,scalefit_630_noupscale" />
 
     <link rel="shortcut icon" href="assets/images/122246146-383358083037993-7611301143656262981-n-188x92.png"
         type="image/x-icon" />
@@ -88,10 +89,11 @@
         <div class="container-fluid align-left">
             <div class="row">
                 <div class="col-md-12 col-lg-12 wrapper-left">
-                    <h3 class="mbr-section-subtitle mbr-white align-left mbr-fonts-style display-7">
+                    <!-- <p class="mbr-section-subtitle mbr-white align-left mbr-fonts-style display-7">
                         <span>Faire du sport en s'amusant</span>
-                    </h3>
+                    </p> -->
                     <h1 class="mbr-section-title mbr-fonts-style align-left display-1">
+                        <span class="mbr-section-subtitle mbr-white align-left mbr-fonts-style display-7">Faire du sport en s'amusant</span>
                         Morning Star
                     </h1>
                     <p class="mbr-text pb-3 mbr-fonts-style display-7" aria-hidden="true"></p>
@@ -249,8 +251,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 map-wrapper">
                     <div class="google-map">
-                        <iframe frameborder="0" style="border: 0"
-                            title="Google map frame"
+                        <iframe frameborder="0" style="border: 0" sandbox title="Google map frame"
                             src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=iim paris"
                             allowfullscreen=""></iframe>
                     </div>
@@ -276,12 +277,14 @@
                                 <p class="mbr-text mbr-fonts-style mbr-light display-7" aria-hidden="true"></p>
                             </div>
                             <div class="col-lg-12 form-group" data-for="Your name">
-                                <input type="text" name="Name" placeholder="Your name *" data-form-field="Name" title="Champ nom"
-                                    required="required" class="form-control display-7" id="Name-forms1-y" />
+                                <input type="text" name="Name" placeholder="Your name *" data-form-field="Name"
+                                    title="Champ nom" required="required" class="form-control display-7"
+                                    id="Name-forms1-y" />
                             </div>
                             <div data-for="E-mail" class="col-lg-12 form-group">
-                                <input type="tel" name="E-mail" placeholder="Your E-mail *" data-form-field="E-mail" title="Champ email"
-                                    class="form-control display-7" required="required" id="E-mail-forms1-y" />
+                                <input type="tel" name="E-mail" placeholder="Your E-mail *" data-form-field="E-mail"
+                                    title="Champ email" class="form-control display-7" required="required"
+                                    id="E-mail-forms1-y" />
                             </div>
                             <div data-for="Message" class="col-lg-12 form-group">
                                 <textarea name="Message" placeholder="Message" data-form-field="Message"
@@ -330,9 +333,15 @@
     <!-- <script src="assets/popper/popper.min.js"></script> -->
     <script src="assets/tether/tether.min.js"></script>
     <!-- <script src="assets/bootstrap/js/bootstrap.min.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
 
     <script src="assets/smoothscroll/smooth-scroll.js"></script>
     <script src="assets/dropdown/js/nav-dropdown.js"></script>
