--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
         <div class="container-fluid align-left">
             <div class="row">
                 <div class="col-md-12 col-lg-12 wrapper-left">
-                    <!-- <p class="mbr-section-subtitle mbr-white align-left mbr-fonts-style display-7">
+                    <p class="mbr-section-subtitle mbr-white align-left mbr-fonts-style display-7">
                         <span>Faire du sport en s'amusant</span>
-                    </p> -->
+                    </p>
                     <h1 class="mbr-section-title mbr-fonts-style align-left display-1">
-                        <span class="mbr-section-subtitle mbr-white align-left mbr-fonts-style display-7">Faire du sport en s'amusant</span>
                         Morning Star
                     </h1>
                     <p class="mbr-text pb-3 mbr-fonts-style display-7" aria-hidden="true"></p>
