--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                     id="E-mail-forms1-y" />
                             </div>
                             <div data-for="Message" class="col-lg-12 form-group">
-                                <textarea name="Message" placeholder="Message" data-form-field="Message"
+                                <textarea name="Message" placeholder="Message" data-form-field="Message" title="Champ texte message"
                                     class="form-control display-7" id="Message-forms1-y"></textarea>
                             </div>
                             <div class="button-svg mbr-section-btn align-left">
