--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; object-src 'none'"> -->
     <meta property="og:title" content="Morning Star" />
     <meta property="og:type" content="Morning Star website" />
     <meta property="og:url" content="https://iim-opti-webiste.vercel.app/" />
@@ -29,6 +28,7 @@
     <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css" />
     <link rel="stylesheet" href="assets/theme/css/style.css" />
     <link rel="stylesheet" href="assets/recaptcha.css" />
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&display=swap|Muli:300,300i,400,600,600i,700,700i,800,800i,900,900i&display=swap&display=swap" rel="stylesheet">
     <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css" />
     <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css" />
 </head>
@@ -328,10 +328,7 @@
         </div>
     </section>
 
-    <!-- <script src="assets/web/assets/jquery/jquery.min.js"></script> -->
-    <!-- <script src="assets/popper/popper.min.js"></script> -->
     <script src="assets/tether/tether.min.js"></script>
-    <!-- <script src="assets/bootstrap/js/bootstrap.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
