--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css" />
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css" />
     <link rel="stylesheet" href="assets/tether/tether.min.css" />
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css" />
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/dropdown/css/style.css" />
+
     <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css" />
     <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css" />
     <link rel="stylesheet" href="assets/theme/css/style.css" />
