--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 map-wrapper">
                     <div class="google-map">
-                        <iframe frameborder="0" style="border: 0" title="Google map frame"
+                        <iframe frameborder="0" style="border: 0" title="Google map frame" sandbox="allow-scripts"
                             src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=iim paris"
                             allowfullscreen=""></iframe>
                     </div>
